--- a/.vuepress/theme/fonts/iconfont.css
+++ b/.vuepress/theme/fonts/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3372761 */
-  src: url('iconfont.woff2?t=1651499869140') format('woff2'),
-       url('iconfont.woff?t=1651499869140') format('woff'),
-       url('iconfont.ttf?t=1651499869140') format('truetype'),
-       url('iconfont.svg?t=1651499869140#iconfont') format('svg');
+  src: url('iconfont.woff2?t=1651571016342') format('woff2'),
+       url('iconfont.woff?t=1651571016342') format('woff'),
+       url('iconfont.ttf?t=1651571016342') format('truetype'),
+       url('iconfont.svg?t=1651571016342#iconfont') format('svg');
 }
 
 .iconfont {
@@ -12,6 +12,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-timeLine:before {
+  content: "\e620";
 }
 
 .icon-eye1:before {
@@ -28,10 +32,6 @@
 
 .icon-home:before {
   content: "\e621";
-}
-
-.icon-timeline:before {
-  content: "\e620";
 }
 
 .icon-docs:before {
