--- a/.vuepress/theme/fonts/iconfont.css
+++ b/.vuepress/theme/fonts/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3372761 */
-  src: url('iconfont.woff2?t=1651571016342') format('woff2'),
-       url('iconfont.woff?t=1651571016342') format('woff'),
-       url('iconfont.ttf?t=1651571016342') format('truetype'),
-       url('iconfont.svg?t=1651571016342#iconfont') format('svg');
+  src: url('iconfont.woff2?t=1651646283173') format('woff2'),
+       url('iconfont.woff?t=1651646283173') format('woff'),
+       url('iconfont.ttf?t=1651646283173') format('truetype'),
+       url('iconfont.svg?t=1651646283173#iconfont') format('svg');
 }
 
 .iconfont {
@@ -12,6 +12,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-language:before {
+  content: "\e625";
 }
 
 .icon-timeLine:before {
