feat(admin): modePicker

--- a/.vuepress/theme/fonts/iconfont.css
+++ b/.vuepress/theme/fonts/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3372761 */
-  src: url('iconfont.woff2?t=1651668961301') format('woff2'),
-       url('iconfont.woff?t=1651668961301') format('woff'),
-       url('iconfont.ttf?t=1651668961301') format('truetype'),
-       url('iconfont.svg?t=1651668961301#iconfont') format('svg');
+  src: url('iconfont.woff2?t=1651807002335') format('woff2'),
+       url('iconfont.woff?t=1651807002335') format('woff'),
+       url('iconfont.ttf?t=1651807002335') format('truetype'),
+       url('iconfont.svg?t=1651807002335#iconfont') format('svg');
 }
 
 .iconfont {
@@ -12,6 +12,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-auto:before {
+  content: "\e629";
+}
+
+.icon-light:before {
+  content: "\e628";
+}
+
+.icon-dark:before {
+  content: "\e627";
 }
 
 .icon-menu-arrow:before {
