fix(admin): search box

--- a/.vuepress/theme/styles/theme.styl
+++ b/.vuepress/theme/styles/theme.styl
@@ -114,7 +114,7 @@ h1, h2, h3, h4, h5, h6
   line-height 1.25
   .content__default:not(.custom) > &
     margin-top (2.1rem - $navbarHeight)
-    padding-top ($navbarHeight - 1.8rem)
+    padding-top ($navbarHeight + 0.5rem)
     margin-bottom 1rem
     &:first-child
       margin-top -3.5rem
