style(custom): code

--- a/.vuepress/theme/styles/code.styl
+++ b/.vuepress/theme/styles/code.styl
@@ -1,7 +1,7 @@
 @require './palette'
 .content__default
  code
-   color lighten($textColor, 20%)
+   color #eb6060
    padding 0.25rem 0.5rem
    margin 0
    font-size 0.85em
